# on-broken-pipe

./: LICENSE  README.md
broken-pipe-errors/: Cargo.toml  README.md
broken-pipe-errors/src/: lib.rs
broken-pipe-kills/: Cargo.toml  LICENSE  README.md
broken-pipe-kills/src/: lib.rs
sigpipe-untouched/: Cargo.toml  README.md
sigpipe-untouched/src/: lib.rs
